# campus-connect

./: LICENSE  README.md  package.json
.github/workflows/: check-prettier.yml
.husky/: pre-commit
apps/backend/: pyproject.toml
apps/backend/campus_connect/: db.sqlite3
apps/backend/campus_connect/campus_connect/: settings.py
apps/web-app/: .gitignore  env.template  next.config.ts  package.json  pnpm-lock.yaml  sanity.config.ts  tailwind.config.js
apps/web-app/Scripts/: update.sh
apps/web-app/docs/: README.md  setup-guide.md
apps/web-app/public/: index.html
apps/web-app/public/fonts/Square_Peg/: OFL.txt
apps/web-app/public/fonts/Stick_No_Bills/: README.txt
apps/web-app/scripts/: check-env.ts  update-env.ts
apps/web-app/src/: middleware.ts
apps/web-app/src/app/: global.css  globals.css  globals.css.orig  globals_BACKUP_84522.css  globals_REMOTE_84522.css  layout.tsx
apps/web-app/src/components/: DockWrapper.tsx  Footer.tsx  Footer.tsx.orig  Navbar.tsx
apps/web-app/src/hooks/: checkauth.ts
apps/web-app/src/validation/: userschema.ts
cms/: env.template  package.json  pnpm-lock.yaml  sanity.cli.ts  sanity.config.ts
docs/data-and-privacy/: DATA_PRIVACY_COMPLIANCE.md
docs/diagrams/flowcharts/: .$campus-connect-flowchart.drawio.bkp  campus-connect-flowchart.drawio
docs/methodology/: attendance.md
docs/references/: concept.md  deployment.md  maintainance.md  scalibility.md
docs/research/: comparison.md  research.md
web-app/: next.config.ts  package.json  pnpm-lock.yaml
web-app/src/app/studio/: page.tsx
(+79 files in other folders)
