[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "murtazapatel89100",email = "murtazapatel89100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
